[tool.poetry]
name = "goit-python-web-homework-11"
version = "0.1.0"
description = ""
authors = ["Artem-Shabaltun <134101240+Artem-Shabaltun@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "goit_python_web_homework_11"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standart"], version = "^0.22.0"}
fastapi = "^0.100.0"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
pydentic = {extras = ["email"], version = "^0.0.1.dev3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
